# simple-fingpt

./: .gitignore
project/: ingestion.py  pyproject.toml  run_qdrant.sh
project/config/: settings.py
project/storage/: vector_storage.py
project/utils/: edgar_client.py  semantic_chunker.py
